Fix display of case studies squares on tablet

--- a/_assets/stylesheets/pages/about/our_work.scss
+++ b/_assets/stylesheets/pages/about/our_work.scss
@@ -57,6 +57,13 @@
   
   .case-study-card-wrapper {
     padding: 1.0em;
+    
+    @media #{$medium-only} {
+      &:last-child {
+        display: inline-block;
+        float: none;
+      }
+    }
   }
   
   .case-study-card-logo {
